Fixed: wflow-core - Form - Regression bug from eb901d7. The changed grid css selector is too high precedence causing custom styling in old app (etc. simple invoicing) does not show correctly. @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/fbuilder.css
+++ b/wflow-consoleweb/src/main/webapp/css/fbuilder.css
@@ -245,7 +245,7 @@
 .form-cell table, .subform-cell table {
     width: 100%;
 }
-.form-cell .grid td, .form-cell .grid th, .subform-cell .grid td, .subform-cell .grid th {
+.form-cell table td, .form-cell table th, .subform-cell table td, .subform-cell table th {
     border: solid 1px silver;
     margin: 0px;
     padding: 3px;
