--- a/wflow-consoleweb/src/main/webapp/css/form.css
+++ b/wflow-consoleweb/src/main/webapp/css/form.css
@@ -27,6 +27,7 @@
     border: none 2px #cccccc;
     background: transparent;
     margin-top: 15px;
+    overflow:hidden;
 }
 .form-section.no_label, .subform-section.no_label {
     margin-top: 0px;
@@ -111,7 +112,7 @@
 .form-cell table, .subform-cell table {
     width: 100%;
 }
-.form-cell .grid td, .form-cell .grid th, .subform-cell .grid td, .subform-cell .grid th {
+.form-cell table td, .form-cell table th, .subform-cell table td, .subform-cell table th {
     border: solid 1px silver;
     margin: 0px;
     padding: 3px;
